@@ -40,26 +40,32 @@ The fox can capture a hen and eliminate it from the board by jumping over it in 
  The fox wins if he manages to eliminate 7 geese. The geese win if they manage to block the fox.
  
 -----------------------------------------------------------------------------------------------------
-## LOOK OF THE GAME
-When first running the game, the game will appear like this. [***Here the human is the Fox and the AI, the goose.***]
+## OVERVIEW OF THE GAME
+The game starts with the yellow geese on the top side of the board. The red fox is placed in the middle of the bottom paddock. 
+Blue lines indicate the possible directions that a pawn can make.
 
-<img src="./doc/img/1.png" alt="alt text" width="300" height="300" /><img src="./doc/img/2.png" alt="alt text" width="300" height="300" /><img src="./doc/img/3.png" alt="alt text" width="300" height="300" /><img src="./doc/img/5.png" alt="alt text" width="300" height="300" /><img src="./doc/img/6.png" alt="alt text" width="300" height="300" /><img src="./doc/img/7.png" alt="alt text" width="300" height="300" />
+During this game, a human is the Fox and AI plays the geese.
 
-After a few moves from the Fox...
+<img src="./doc/img/1.png" alt="alt text" width="300" height="300" />
 
-<img src="./doc/img/8.png" alt="alt text" width="300" height="300" />
+When the fox is selected, the 8 litte squares boxes appear to help the human player selecting a destination for the fox.
 
-We ate a Goose!
+<img src="./doc/img/2.png" alt="alt text" width="300" height="300" />
 
-<img src="./doc/img/9.png" alt="alt text" width="300" height="300" />
+The following four figures show different stages of the game.
+
+<img src="./doc/img/3.png" alt="alt text" width="250" height="250" /><img src="./doc/img/5.png" alt="alt text" width="250" height="250" />
+<img src="./doc/img/6.png" alt="alt text" width="250" height="250" /><img src="./doc/img/7.png" alt="alt text" width="250" height="250" />
+
+The fox before and after eating a goose. 🦊
+
+<img src="./doc/img/8.png" alt="alt text" width="300" height="300" /><img src="./doc/img/9.png" alt="alt text" width="300" height="300" />
 
 
 ------------------------------------------------------------------------------------------------------
 ## User interface – How to play the game
 
- &emsp;At the end of the project the view and the control of the game will be 100% graphical
-oriented. Before these features are ready, we use command line arguments to configure the
-game options such as the modes, the name of the players, the team membership and
+ &emsp;We use command line arguments to configure the game options such as the modes, the name of the players, the team membership and
 selection of the AI algorithms. For example, among the modes of operations one can select
 one of the 4 following modes:
 - Human against Human
@@ -79,21 +85,11 @@ List of options:
  -t2|--team2 <Fox|Geese>     The team of player #2.
  -a1|--algo1 <0|1|2>         The algorithm strength of computer #1.
  -a2|--algo2 <0|1|2>         The algorithm strength of computer #2.
- -s|--seed  <LONG> The seed of the random generator. If 0, (TODO-TBD).
+ -s|--seed   <LONG>          The seed of the random generator. 
 Enjoy the game...
 ```
 
-**Example :** 
-``` 
---mode DoubleComputer --algo1 1 --algo2 1 --seed 42
-```
-
-**VM options:**
-``` 
---module-path /usr/share/openjfx/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
-``` 
-
-**Add JavaFX, JUnit tutorial...**
+**See also...**
 
 https://cours-info.iut-bm.univ-fcomte.fr/index.php/menu-cours-s2/mmi1bobj-menu-2/2265-tutoriel-1-creer-un-projet-idea-utilisant-le-framework-gamifier        
 https://cours-info.iut-bm.univ-fcomte.fr/index.php/menu-cours-s2/mmi1bobj-menu-2/2283-tutoriel-2-ajouter-junit-a-un-projet-idea-gamifier
